# Django_airbnb_backend

./: pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detail_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: admin.py  models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  views.py
rooms/migrations/: 0001_initial.py  0002_amenity_created_at_amenity_updated_at_and_more.py  0003_room_name_alter_amenity_description_alter_room_city_and_more.py  0004_alter_amenity_options.py  0005_room_category.py  0006_alter_room_category_alter_room_owner.py  0007_alter_room_amenities.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
wishlists/: admin.py  models.py
(+2 files in other folders)
